# bank-and-credit-convertor

./: README.adoc  db.ods  db.xlsx  pyproject.toml  tmp.xlsx
docs/: db_tables.adoc  new_bank_sheet.uml
lib/: bank_handler.py  credit_card_handler.py  database_handler.py
src/: bank_handler.py  credit_card_handler.py  database_handler.py  dataframe_convertor.py  main.py
test/: leumi_bank_test.xlsx  max-credit-card_test.xlsx  test_bank-parser.py  test_credit-card-parser.py  test_database.py  test_dataframe_convertor.py
