[tool.poetry]
name = "bank-and-credit-convertor"
version = "0.1.0"
description = ""
authors = ["Yehonatan Elentok <elyoni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
